Update to 26.1 snapshots, renames and fixes