@@ -10,15 +10,15 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.Identifier;
 import net.minecraft.tags.TagKey;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A node group that is defined in a tag files. Loaded using the fabric client tag api.
  * This is only safe to use for fully client side graph environments.
  */
 public record ClientTagNodeGroup(TagKey<NodeType<?>> tag) implements NodeGroup {
-    public static final Identifier DECODER_ID = NodeFlow.id("client_tag");
+    public static final Identifier CODEC_ID = NodeFlow.id("client_tag");
     public static final StreamCodec<FriendlyByteBuf, TagNodeGroup> CODEC =
             StreamCodec.composite(Identifier.STREAM_CODEC.map(id -> TagKey.create(NodeType.KEY, id), TagKey::location), TagNodeGroup::tag, TagNodeGroup::new);
 
@@ -31,13 +31,13 @@ public record ClientTagNodeGroup(TagKey<NodeType<?>> tag) implements NodeGroup {
     public List<NodeType<?>> getTypes() {
         return ClientTags.getOrCreateLocalTag(tag)
                 .stream()
-                .map(NodeType.REGISTRY::getValue)
+                .<NodeType<?>>map(NodeType.REGISTRY::getValue)
                 .distinct()
-                .collect(Collectors.toList()); // toList gives generics error
+                .toList();
     }
 
     @Override
     public Identifier getCodecId() {
-        return DECODER_ID;
+        return CODEC_ID;
     }
 }
