@@ -3,11 +3,6 @@ package io.github.mattidragon.nodeflow.client.ui.widget;
 import io.github.mattidragon.nodeflow.NodeFlow;
 import io.github.mattidragon.nodeflow.client.ui.NodeConfigScreenRegistry;
 import io.github.mattidragon.nodeflow.graph.node.NodeTag;
-import net.minecraft.client.input.MouseButtonEvent;
-import org.jetbrains.annotations.Nullable;
-
-import java.util.ArrayList;
-import java.util.List;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.ComponentPath;
@@ -19,13 +14,18 @@ import net.minecraft.client.gui.components.Renderable;
 import net.minecraft.client.gui.components.events.AbstractContainerEventHandler;
 import net.minecraft.client.gui.components.events.GuiEventListener;
 import net.minecraft.client.gui.navigation.FocusNavigationEvent;
+import net.minecraft.client.input.MouseButtonEvent;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.Style;
+import org.jspecify.annotations.Nullable;
+
+import java.util.ArrayList;
+import java.util.List;
 
 public class ContextMenuWidget extends AbstractContainerEventHandler implements Renderable {
     private final EditorAreaWidget area;
-    public NodeWidget node;
+    public @Nullable NodeWidget node;
     public final List<AbstractWidget> widgets = new ArrayList<>();
 
     public ContextMenuWidget(EditorAreaWidget area) {
@@ -35,36 +35,36 @@ public class ContextMenuWidget extends AbstractContainerEventHandler implements 
     public void show(int x, int y, @Nullable NodeWidget node) {
         hide();
 
-        widgets.add(Button.builder(CommonComponents.GUI_CANCEL, __ -> hide()).size(100, 12).build());
+        widgets.add(Button.builder(CommonComponents.GUI_CANCEL, _ -> hide()).size(100, 12).build());
         if (node != null) {
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.duplicate"), __ -> area.duplicateNode())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.duplicate"), _ -> area.duplicateNode())
                     .size(100, 12)
                     .build());
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.delete"), __ -> area.deleteNode())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.delete"), _ -> area.deleteNode())
                     .size(100, 12)
                     .build());
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.copy"), __ -> area.copyNode())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.copy"), _ -> area.copyNode())
                     .size(100, 12)
                     .build());
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.paste"), __ -> area.pasteNode(x, y))
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.paste"), _ -> area.pasteNode(x, y))
                     .size(100, 12)
                     .build());
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.cut"), __ -> area.cutNode())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.cut"), _ -> area.cutNode())
                     .size(100, 12)
                     .build());
             if (NodeConfigScreenRegistry.hasConfig(node.node)) {
-                widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.configure"), __ -> area.configureNode())
+                widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.configure"), _ -> area.configureNode())
                         .size(100, 12)
                         .build());
             }
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.tag"), __ -> setupTagging())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.tag"), _ -> setupTagging())
                     .size(100, 12)
                     .build());
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.name"), __ -> setupNaming())
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.name"), _ -> setupNaming())
                     .size(100, 12)
                     .build());
         } else {
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.paste"), __ -> area.pasteNode(x, y))
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.paste"), _ -> area.pasteNode(x, y))
                     .size(100, 12)
                     .build());
         }
@@ -86,7 +86,7 @@ public class ContextMenuWidget extends AbstractContainerEventHandler implements 
         }
 
         if (!widgets.isEmpty()) {
-            this.setFocused(widgets.get(0));
+            this.setFocused(widgets.getFirst());
         }
     }
 
@@ -99,16 +99,16 @@ public class ContextMenuWidget extends AbstractContainerEventHandler implements 
             NodeFlow.LOGGER.warn("Tried to setup tagging without showing context menu");
             return;
         }
-        var x = widgets.get(0).getX();
-        var y = widgets.get(0).getY();
+        var x = widgets.getFirst().getX();
+        var y = widgets.getFirst().getY();
         widgets.clear();
-        widgets.add(Button.builder(CommonComponents.GUI_BACK, __ -> show(x, y, node))
+        widgets.add(Button.builder(CommonComponents.GUI_BACK, _ -> show(x, y, node))
                 .size(100, 12)
                 .build());
 
         for (var tag : NodeTag.values()) {
             var text = Component.empty().append(Component.literal("■ ").setStyle(Style.EMPTY.withColor(tag.getColor()))).append(Component.translatable("nodeflow.editor.node_tag." + tag.asString()));
-            widgets.add(Button.builder(text, __ -> area.tagNode(tag))
+            widgets.add(Button.builder(text, _ -> area.tagNode(tag))
                     .size(100, 12)
                     .build());
         }
@@ -116,18 +116,18 @@ public class ContextMenuWidget extends AbstractContainerEventHandler implements 
     }
 
     private void setupNaming() {
-        if (widgets.isEmpty()) {
+        if (widgets.isEmpty() || node == null) {
             NodeFlow.LOGGER.warn("Tried to setup naming without showing context menu");
             return;
         }
-        var x = widgets.get(0).getX();
-        var y = widgets.get(0).getY();
+        var x = widgets.getFirst().getX();
+        var y = widgets.getFirst().getY();
         widgets.clear();
-        widgets.add(Button.builder(CommonComponents.GUI_BACK, __ -> show(x, y, node))
+        widgets.add(Button.builder(CommonComponents.GUI_BACK, _ -> show(x, y, node))
                 .size(100, 12)
                 .build());
         if (node.node.nickname != null) {
-            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.clear_name"), __ -> area.renameNode(null))
+            widgets.add(Button.builder(Component.translatable("nodeflow.editor.button.clear_name"), _ -> area.renameNode(null))
                     .size(100, 12)
                     .build());
         }
@@ -140,7 +140,7 @@ public class ContextMenuWidget extends AbstractContainerEventHandler implements 
         }
         widgets.add(textField);
 
-        widgets.add(Button.builder(CommonComponents.GUI_DONE, __ -> area.renameNode(textField.getValue()))
+        widgets.add(Button.builder(CommonComponents.GUI_DONE, _ -> area.renameNode(textField.getValue()))
                 .size(100, 12)
                 .build());
         positionWidgets(x, y);
